# svcs-rag

./: .gitignore  FusionRetriever.py  RagEngine.py  basic_qa.py  chainlit.md  containerfile  crawl.py  customchainlitds.py  pyproject.toml  start-chainlit.sh
.chainlit/: config.toml
.chainlit/translations/: en-US.json
ingest/: crawl.py
ocp-resources/: README.md  svcsbot-resources.yaml
tests/: tgisllm_test.py
tgis/: TGISLLM.py  generation_pb2_grpc.py  tgis_grpc_client.py
