[tool.poetry]
name = "svcs-rag"
version = "0.1.0"
description = ""
authors = ["Noel O'Connor <noel.oconnor@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.5"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
openai = "^1.11.0"
tiktoken = "^0.5.2"
llama-index = "^0.9.43"
chainlit = "^1.0.301"
chromadb = "^0.4.24"
rank-bm25 = "^0.2.2"
debugpy = "^1.8.1"
flagembedding = "^1.2.5"
pysqlite3-binary = "^0.5.2.post3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
